# cedr-ivfrm

./: .gitignore  CEDR_COMPLETE_PROJECT_GUIDE.md  CEDR_CRITICAL_REVIEW.md  CEDR_FINAL_DOCUMENT_v5.md  CEDR_Final_Presentation_35_Complete.pptx  CEDR_Final_Presentation_35_Slides.pptx  CEDR_Final_Presentation_35_with_Images.pptx  CEDR_Final_Presentation_v2.pptx  CEDR_Improvement_Plan.md  CEDR_MASTER_DOCUMENT.md  CEDR_Presentation_Web_Converted.pptx  CEDR_Professional_Presentation.pptx  CEDR_Project_Budget_TCO.md  CEDR_Project_Budget_TCO_Business.md  CEDR_Project_Budget_TCO_Professional.md  CEDR_Risk_Analysis.md  CEDR_UML_Diagrams.md  CEDR_User_Stories.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  SECURITY.md  attack_simulation_results.json  convert_html_to_pptx.py  create_cedr_presentation_final.py  create_final_presentation.py  create_final_presentation_complete.py  create_final_presentation_v2.py  create_improvement_visuals.py  create_pptx.py  create_presentation.py  create_presentation_with_images.py  create_professional_deployment.py  create_professional_presentation.py  create_professional_uml.py  create_updated_uml_pngs.py  create_v2x_presentation.py  (+26 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
capture/: packet_capture.py
cloud-backend/: cloud_server.py
cloud-backend/templates/: investigator_dashboard.html
compliance/: iso21434_compliance.py
docs/: README.md
examples/: README.md  basic_logging.py  verify_chain.py
forensics/: evidence_packaging.py
frontend/: investigator_dashboard.html
in-vehicle-module/: cedr_module.py
location/: geolocation.py
testing/: advanced_attack_simulator.py  attack_simulation_results.json  dashboard_attack_simulator.py
tests/: README.md
tests/unit/: test_encryption.py  test_hash_chain.py
tools/: README.md
uml/: README.md  activity_incident_response.puml  class_diagram.puml  class_diagram_v2.puml  component_diagram.puml  component_diagram_v2.puml  deployment_diagram.puml  deployment_diagram_v2.puml  risk_heatmap.puml  sequence_event_logging.puml  use_case_diagram.puml  user_story_map.puml  user_story_pyramid.puml
v2x/: v2x_security.py
visualizations/: README.md  User_Story_Visuals_ASCII.md
