[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cedr-ivfrm"
version = "1.0.0"
description = "Cybersecurity Event Data Recorder - In-Vehicle Forensic Readiness Module"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Siva Sai Akunuru", email = "sivasaiakunuru0@gmail.com"}
]
keywords = ["cybersecurity", "automotive", "forensics", "can-bus", "iot-security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Automotive Industry",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Logging",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "cryptography>=41.0.0",
    "python-can>=4.3.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "python-pptx>=0.6.21",
    "matplotlib>=3.7.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "bandit>=1.7.5",
]
ml = [
    "tensorflow>=2.13.0",
    "scikit-learn>=1.3.0",
]
cloud = [
    "boto3>=1.28.0",
    "azure-identity>=1.14.0",
    "google-cloud-storage>=2.10.0",
    "influxdb-client>=1.37.0",
]
docs = [
    "Sphinx>=7.1.0",
    "sphinx-rtd-theme>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/sivasaiakunuru/cedr-ivfrm"
Documentation = "https://github.com/sivasaiakunuru/cedr-ivfrm/blob/master/README.md"
Repository = "https://github.com/sivasaiakunuru/cedr-ivfrm"
Issues = "https://github.com/sivasaiakunuru/cedr-ivfrm/issues"
Changelog = "https://github.com/sivasaiakunuru/cedr-ivfrm/blob/master/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["examples*", "tests*", "tools*"]
exclude = [".github*", "uml*", "visualizations*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "security: marks tests as security tests",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", "examples"]
skips = ["B101"]  # Skip assert_used warnings in non-test code
